[gd_scene load_steps=8 format=3 uid="uid://cms51cjmyx103"]

[ext_resource type="Theme" uid="uid://8hqlogsadb8w" path="res://Main.theme" id="1_ta1a6"]
[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="2_bhgfv"]
[ext_resource type="Texture2D" uid="uid://dk4yt2rvmpsa7" path="res://assets/graphics/asset_ui_scifi/TitlePanel02.png" id="2_o36oa"]
[ext_resource type="Script" path="res://scenes/ui/ui_button.gd" id="3_ew63n"]

[sub_resource type="Gradient" id="Gradient_jl7j2"]
offsets = PackedFloat32Array(0, 0.6, 1)
colors = PackedColorArray(0, 0, 0, 0.501961, 0, 0, 0, 0.501961, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_05uwv"]
gradient = SubResource("Gradient_jl7j2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2yhvy"]
content_margin_left = 12.0
content_margin_top = 2.0
content_margin_right = 12.0
content_margin_bottom = 2.0
texture = SubResource("GradientTexture1D_05uwv")

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("initial_focus_control")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ta1a6")
script = ExtResource("2_bhgfv")
initial_focus_control = NodePath("HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions/Apply")

[node name="HLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer_Left" type="Control" parent="HLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WindowContainer" type="VBoxContainer" parent="HLayout"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = -12

[node name="TitleBar" type="MarginContainer" parent="HLayout/WindowContainer"]
z_index = 1
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HLayout/WindowContainer/TitleBar"]
layout_mode = 2
texture = ExtResource("2_o36oa")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="HLayout/WindowContainer/TitleBar"]
layout_mode = 2
theme_type_variation = &"Title_Label"
text = "        Options        "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPanel" type="PanelContainer" parent="HLayout/WindowContainer"]
layout_mode = 2
theme_type_variation = &"Panel_SciFi_A"

[node name="PanelLayout" type="VBoxContainer" parent="HLayout/WindowContainer/CPanel"]
layout_mode = 2

[node name="PanelSpacer" type="Control" parent="HLayout/WindowContainer/CPanel/PanelLayout"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="HeadingAudio" type="PanelContainer" parent="HLayout/WindowContainer/CPanel/PanelLayout"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2yhvy")

[node name="Label" type="Label" parent="HLayout/WindowContainer/CPanel/PanelLayout/HeadingAudio"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Audio"
vertical_alignment = 1

[node name="AudioOptions" type="GridContainer" parent="HLayout/WindowContainer/CPanel/PanelLayout"]
layout_mode = 2
columns = 2

[node name="LblMaster" type="Label" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
layout_mode = 2
theme_type_variation = &"Label_Option"
text = "Master:"

[node name="SliderMaster" type="HSlider" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1000.0

[node name="LblMusic" type="Label" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
layout_mode = 2
theme_type_variation = &"Label_Option"
text = "Music:"

[node name="SliderMusic" type="HSlider" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1000.0

[node name="LblSFX" type="Label" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
layout_mode = 2
theme_type_variation = &"Label_Option"
text = "SFX:"

[node name="SliderSFX" type="HSlider" parent="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1000.0

[node name="HSeparator" type="HSeparator" parent="HLayout/WindowContainer/CPanel/PanelLayout"]
layout_mode = 2

[node name="ButtonOptions" type="HBoxContainer" parent="HLayout/WindowContainer/CPanel/PanelLayout"]
layout_mode = 2

[node name="Apply" type="Button" parent="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions"]
layout_mode = 2
theme_type_variation = &"Button_SciFi_A"
text = "Apply"
script = ExtResource("3_ew63n")

[node name="Control" type="Control" parent="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions"]
layout_mode = 2
theme_type_variation = &"Button_SciFi_A"
text = "Reset"
script = ExtResource("3_ew63n")

[node name="Spacer_Right" type="Control" parent="HLayout"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions/SliderMaster" to="." method="_on_slider_master_value_changed"]
[connection signal="value_changed" from="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions/SliderMusic" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="HLayout/WindowContainer/CPanel/PanelLayout/AudioOptions/SliderSFX" to="." method="_on_slider_sfx_value_changed"]
[connection signal="audio_requested" from="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions/Apply" to="." method="_on_audio_requested"]
[connection signal="pressed" from="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions/Apply" to="." method="_on_apply_pressed"]
[connection signal="audio_requested" from="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions/Reset" to="." method="_on_audio_requested"]
[connection signal="pressed" from="HLayout/WindowContainer/CPanel/PanelLayout/ButtonOptions/Reset" to="." method="_on_reset_pressed"]
